--- a/css/styles.css
+++ b/css/styles.css
@@ -215,6 +215,9 @@ background-color: #FFFFFF;
 .container{
   width: 1158px;
 }
+h1, h2, h3, h4, h5, h6, p{
+  margin: 0;
+}
 .page-container{
   min-height: 100vh;
     display: flex;
