--- a/css/styles.css
+++ b/css/styles.css
@@ -215,7 +215,7 @@ background-color: #FFFFFF;
 .container{
   width: 1158px;
 }
-h1, h2, h3, h4, h5, h6, p{
+h1, h2, h3, h4, h5, h6, p, ul{
   margin: 0;
 }
 .page-container{
