--- a/css/styles.css
+++ b/css/styles.css
@@ -234,3 +234,6 @@ gap: var(--indent);
 .card-set-item{
 flex-basis: calc((100% - var(--indent) • (var(--¡tems) - 1)) / var(--items));
 }
+.section{
+  
+}
