--- a/css/styles.css
+++ b/css/styles.css
@@ -15,6 +15,7 @@ body {
 }
 /*Header section*/
 .header {
+  border-bottom: 1px solid #e7e9fc;
   background: #ffffff;
   flex-shrink: 0;
 }
@@ -29,6 +30,7 @@ body {
   letter-spacing: 0.03em;
   text-transform: uppercase;
   color: #4d5ae5;
+  margin-right: 76px;
 }
 .link {
   text-decoration: none;
@@ -71,10 +73,13 @@ body {
 }
 /*Hero section*/
 .hero {
+  padding-top: 188px;
+  padding-bottom: 188px;
   flex-shrink: 0;
   background: var(--brand-color);
 }
 .hero-title {
+  max-width: 496px;
   font-style: normal;
   font-weight: 700;
   font-size: 56px;
@@ -84,6 +89,13 @@ body {
   color: #ffffff;
 }
 .hero-button {
+  display: block;
+  min-width: 169px;
+  height: 56px;
+  border: none;
+  background-color: var(--primary-accent-color);
+  border-radius: 4px;
+  cursor: pointer;
   font-family: "Roboto", sans-serif;
   font-weight: 500;
   font-size: 16px;
@@ -101,10 +113,12 @@ body {
 }
 /*Benefits section*/
 .benefits-item {
+  width: calc((100% - 72px) / 4);
   flex-shrink: 0;
   background-color: #ffffff;
 }
 .benefits-titles {
+  margin-bottom: 8px;
   font-style: normal;
   font-weight: 500;
   font-size: 20px;
@@ -120,6 +134,7 @@ body {
 }
 /*Services section*/
 .services-title {
+  margin-bottom: 72px;
   font-style: normal;
   font-weight: 700;
   font-size: 36px;
@@ -136,9 +151,12 @@ body {
 }
 /*Team section*/
 .team {
+  padding-top: 120px;
+  padding-bottom: 120px;
   background-color: #f4f4fd;
 }
 .team-title {
+  margin-bottom: 72px;
   font-style: normal;
   font-weight: 700;
   font-size: 36px;
@@ -149,19 +167,22 @@ body {
   color: var(--brand-color);
 }
 .team-item {
+  width: calc((100% - 72px) / 4);
+  border-radius: 0px 0px 4px 4px;
   display: inline-flex;
   padding-bottom: 0px;
   flex-direction: column;
   justify-content: center;
   align-items: center;
   gap: 32px;
-  border-radius: 0px 0px 4px 4px;
   box-shadow: 0px 2px 1px 0px rgba(46, 47, 66, 0.08),
     0px 1px 1px 0px rgba(46, 47, 66, 0.16),
     0px 1px 6px 0px rgba(46, 47, 66, 0.08);
   background-color: #ffffff;
 }
 .team-titles {
+  text-align: center;
+  margin-bottom: 8px;
   font-style: normal;
   font-weight: 500;
   font-size: 20px;
@@ -170,6 +191,7 @@ body {
   color: var(--brand-color);
 }
 .team-text {
+  text-align: center;
   font-size: 16px;
   line-height: 1.5;
   letter-spacing: 0.02em;
@@ -177,10 +199,14 @@ body {
 }
 /*Footer section*/
 .footer {
+  padding-top: 100px;
+  padding-bottom: 100px;
   flex-shrink: 0;
   background: var(--brand-color);
 }
 .footer-logo {
+  display: inline-block;
+  margin-bottom: 16px;
   font-family: "Raleway", sans-serif;
   font-weight: 800;
   font-size: 18px;
@@ -190,6 +216,7 @@ body {
   color: #4d5ae5;
 }
 .footer-text {
+  margin-bottom: 16px;
   font-size: 16px;
   line-height: 1.5;
   letter-spacing: 0.02em;
@@ -237,8 +264,22 @@ body {
   color: var(--primary-color);
 }
 /* Home work three*/
+.header-container {
+  display: flex;
+}
+.header-list {
+  display: flex;
+  gap: 40px;
+}
 .container {
   width: 1158px;
+  margin: 0;
+  padding-left: 15px;
+  padding-right: 15px;
+}
+.header-navigation {
+  display: flex;
+  align-items: center;
 }
 h1,
 h2,
@@ -271,8 +312,28 @@ main {
   gap: 32px;
   flex-shrink: 0;
   flex-basis: calc((100% - var(--indent) • (var(--¡tems) - 1)) / var(--items));
-  
 }
-.section {
-
+.header-item {
+  padding-top: 24px;
+  padding-bottom: 24px;
+}
+.benefits-section {
+  padding-top: 120px;
+  padding-bottom: 120px;
+}
+.benefits-list {
+  display: flex;
+  gap: 24px;
+}
+.services-section {
+  padding-bottom: 120px;
+}
+.services-item {
+  width: calc((100% - 48px) / 3);
+}
+.team-container {
+  padding-top: 32px;
+  padding-bottom: 32px;
+  padding-left: 16px;
+  padding-right: 16px;
 }
