--- a/css/styles.css
+++ b/css/styles.css
@@ -39,6 +39,8 @@ body {
   color: var(--brand-color);
 }
 .header-link {
+  padding-top: 24px;
+    padding-bottom: 24px;
   font-weight: 500;
   font-size: 16px;
   line-height: 1.5;
@@ -243,14 +245,17 @@ body {
   border: 1px solid var(--cornflower, #e7e9fc);
 }
 .main-button:hover {
+  border: 1px solid transparent;
   color: #ffffff;
   background-color: #404bbf;
 }
 .main-button:focus {
+  border: 1px solid transparent;
   color: #ffffff;
   background-color: #404bbf;
 }
 .row-title {
+  margin-bottom: 8px;
   font-weight: 500;
   font-size: 20px;
   line-height: 1.2;
@@ -273,12 +278,13 @@ body {
 }
 .container {
   width: 1158px;
-  margin: 0;
+  margin: 0 auto;
   padding-left: 15px;
   padding-right: 15px;
 }
 .header-navigation {
   display: flex;
+  gap: 40px;
   align-items: center;
 }
 h1,
@@ -291,20 +297,17 @@ p,
 ul {
   margin: 0;
 }
-.page-container {
-  min-height: 100vh;
-  display: flex;
-  flex-direction: column;
-}
 main {
   flex-grow: 1;
 }
 .card-set {
   display: flex;
   flex-wrap: wrap;
-  gap: var(--indent);
+  column-gap: 24px;
+  row-gap: 48px;
 }
 .card-set-item {
+  width: calc((100% - 48px) / 3);
   display: flex;
   padding-bottom: 0px;
   flex-direction: column;
@@ -312,10 +315,6 @@ main {
   gap: 32px;
   flex-shrink: 0;
   flex-basis: calc((100% - var(--indent) • (var(--¡tems) - 1)) / var(--items));
-}
-.header-item {
-  padding-top: 24px;
-  padding-bottom: 24px;
 }
 .benefits-section {
   padding-top: 120px;
@@ -336,4 +335,18 @@ main {
   padding-bottom: 32px;
   padding-left: 16px;
   padding-right: 16px;
+}
+.section{
+  padding-top: 96px;
+    padding-bottom: 120px;
+}
+.hero-list{
+  display: flex;
+  gap: 24px;
+  margin-bottom: 72px
+}
+.portfolio-conteiner{
+  padding: 32px 16px;
+  border: 1px solid #e7e9fc;
+  border-top: none;
 }
